--- a/css/section-1.css
+++ b/css/section-1.css
@@ -52,7 +52,7 @@
 
 @media screen and (max-width:864px){
   .section-1{
-    height: 40vh;
+    height: 55vh;
   }
 }
 
@@ -92,3 +92,8 @@
   font-style: normal;
 }
 
+@media screen and (max-width:800px){
+  .section-2 .marcas-pai h2{
+    font-size: 26px;
+  }
+}
