--- a/css/section-1.css
+++ b/css/section-1.css
@@ -50,12 +50,6 @@
   margin-top: 10px;
 }
 
-@media screen and (max-width:864px){
-  .section-1{
-    height: 55vh;
-  }
-}
-
 
 @media screen and (max-width: 730px){
   .h1{
@@ -77,7 +71,7 @@
   display: flex;
   justify-content: space-around;
   gap: 10px;
-  min-width: 400px;
+  min-width: 360px;
 }
 
 .section-2 .marcas-pai img {
@@ -92,7 +86,18 @@
   font-style: normal;
 }
 
-@media screen and (max-width:800px){
+
+@media screen and (max-width:864px){
+  .section-1{
+    height: 55vh;
+  }
+
+  .section-2 .marcas-pai{
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+  }
+
   .section-2 .marcas-pai h2{
     font-size: 26px;
   }
