--- a/css/section-5.css
+++ b/css/section-5.css
@@ -17,8 +17,8 @@
 .imagem-loja{
     width: 100%;
     padding-block: 20px;
-    gap: 10px;
     display: flex;
+    gap: 5px;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -75,6 +75,7 @@
     text-align: center;
     padding-inline: 5px;
     background-color: rgb(15, 15, 15);
+    padding-inline: 20px;
 }
 
 .tela-2{
